src/styles.scss
@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Lato:wght@300;400;700;900&display=swap");

$menu-bgc: #659dbd;
$main-bgc: #ffffff;
$menu-height: 4rem;

*,
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: Lato, Roboto, Arial, sans-serif;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.wrapper {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  justify-content: space-between;
  max-width: 1300px;
  padding: 0 1rem;
  height: 100%;

  &--main {
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    background-color: $main-bgc;
  }
}

